Translate text to English

--- a/20140603-http_daemon_ssl-hanging-problem/README.org
+++ b/20140603-http_daemon_ssl-hanging-problem/README.org
@@ -1,7 +1,13 @@
-request sepanjang ini (give or take some more, mis jika pake wget atau beda
-versi curl) ngehang. kurangi dikit maka ga ngehang:
+To test, start (one of) the server(s):
+
+: % ./http-daemon-with-timeout
+
+Given some longish request (give or take a few characters), the server will
+hang. Make it shorter and it won't anymore.
 
 : % curl -vvv -k 'https://localhost:8084/api/account.shared.modify/create_account?a=--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------'
 
-menggunakan Gepok 0.27 ke atas juga ga ngehang karena opsi Timeout udah gw
-cabut.
+Tested with HTTP::Daemon::SSL 1.04 (won't hang for long requests if Timeout
+option is not given) and HTTP::Daemon::SSL 1.05_01 (hang for long requests for
+both http-daemon-with{,out}-timeout).
+
